# NCN-AVS-STABLE

./: README.md  ZK-COMPRESSION-README.md  start-services.sh
NCNs-AVS-JITO-PROGRAMS/: .gitignore  FRONTEND_INTEGRATION.md  README.md
NCNs-AVS-JITO-PROGRAMS/bridge/: README.md  package-lock.json  package.json  tsconfig.json
NCNs-AVS-JITO-PROGRAMS/bridge/src/: index.ts
NCNs-AVS-JITO-PROGRAMS/payloads/price-oracle/: Dockerfile  README.md  package.json  tsconfig.json
blockchain-logic-stablefunds/: Anchor.toml  README.md  package-lock.json  package.json
blockchain-logic-stablefunds/programs/blockchain-logic-stablefunds/: Cargo.toml
blockchain-logic-stablefunds/programs/blockchain-logic-stablefunds/src/: lib.rs
blockchain-logic-stablefunds/programs/stablefunds/: Cargo.toml
blockchain-logic-stablefunds/tests/: blockchain-logic-stablefunds.ts  stablefunds.ts
frontend/: .env.development  .env.production  .gitignore  README-CIVIC-AUTH.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  polyfills.ts
frontend/src/components/: CompressionStats.tsx  CompressionStatus.tsx  CompressionToggle.tsx  ErrorBoundary.tsx
frontend/src/context/: AppContext.tsx  CivicAuthContext.tsx  CombinedWalletProvider.tsx  ThemeContext.tsx  WalletContext.tsx
frontend/src/hooks/: useStableFunds.ts
stablefunds/: Anchor.toml
stablefunds/tests/: stablefunds.ts
stablefunds_program/: Anchor.toml  package-lock.json
stablefunds_program/tests/: stablefunds_program.ts
(+63 files in other folders)
